superkube/vars/scales.scss
// =Scales
$scales: map-extend($scales, (
    type: (
        base: (
            h1: 56px 1.15,
            h2: 28px 1.35,
            h3: 20px 1.4,
            h4: 16px 1.5
        ),
        heading: (
            giga: 96px 1.1,
            xxmega: 80px 1.15,
            xmega: 72px 1.15,
            mega: 64px 1.15,
            xxhuge: 60px 1.15,
            xhuge: 56px 1.15,
            huge: 48px 1.2,
            xxlarge: 44px 1.2,
            xlarge: 40px 1.2,
            large: 36px 1.2,
            xxmedium: 32px 1.3,
            xmedium: 28px 1.3,
            medium: 24px 1.3,
            small: 20px 1.4,
            micro: 16px 1.5,
            tagline: 11px 1.5
        ),
        text: (
            giga: 32px 1.5,
            mega: 24px 1.5,
            huge: 20px 1.5,
            large: 18px 1.5,
            default: 16px 1.5,
            medium: 14px 1.5,
            small: 13px 1.5,
            tiny: 12px 1.5,
            atomic: 10px 1.5
        )
    ),
    type-sm: (
        heading: (
            giga: 60px 1.15,
            xxmega: 60px 1.15,
            xmega: 60px 1.15,
            mega: 60px 1.15
        )
    ),
    type-md: (),
    type-lg: (),
    type-space: (
        h1-to-tag: 5rem,
        h2-to-tag: 3rem,
        h3-to-tag: 3rem,
        h4-to-tag: 2rem,
        h5-to-tag: 2rem,
        h6-to-tag: 2rem,
        tag-to-tag: 5rem,
        tag-to-h2: 8rem,
        tag-to-h3: 8rem,
        tag-to-h4: 8rem,
        tag-to-h5: 8rem,
        tag-to-h6: 8rem,
        figure-to-tag: 8rem,
        form-item-to-item: 5rem
    ),
    breakpoint: (
        lg: 1442px,
        md: 1024px,
        sm: 768px
    ),
    sidebar: (
        base: 300px
    ),
    grid: (
        gridname: grid,
        columnname: column,
        columns: 12,
        gutter: 8rem,
        gap: 6rem
    ),
    container: (
        small: 400px,
        content: 800px,
        medium: 1000px,
        base: 1112px,
        large: 1240px,
        full: 100%
    ),
    edge: (
        base: 5rem
    ),
    level: (
        over-page: 100, // dropdowns/popovers
        over-content: 200, // modals/popups
        over-all: 300 // messages
    ),
    radius: (
        small: 2px,
        medium: 4px,
        base: 6px,
        large: 8px,
        huge: 12px
    ),
    divider: (
        1: 1px,
        2: 2px,
        3: 3px,
        4: 4px,
        6: 6px,
        8: 8px,
        10: 10px
    ),
    divider-length: (
        small: 60px,
        medium: 80px,
        large: 100px
    ),
    border: (
        1: 1px,
        2: 2px
    ),
    icon: (
        12: 12px,
        14: 14px,
        16: 16px,
        20: 20px,
        24: 24px,
        32: 32px,
        48: 48px,
        64: 64px
    ),
    iconbox: (
        small: 4px,
        medium: 6px,
        base: 8px,
        large: 10px,
        huge: 12px
    ),
    sizing: (
        20: 20%,
        25: 25%,
        30: 30%,
        33: 33%,
        40: 40%,
        50: 50%,
        60: 60%,
        67: 67%,
        70: 70%,
        75: 75%,
        80: 80%,
        100: 100%
    ),
    spacing: (
        1: 1,
        2: 2,
        3: 3,
        4: 4,
        5: 5,
        6: 6,
        7: 7,
        8: 8,
        9: 9,
        10: 10,
        11: 11,
        12: 12,
        13: 13,
        14: 14,
        15: 15,
        20: 20,
        25: 25,
        30: 30
    ),
    image: (
        32: 32px,
        48: 48px,
        64: 64px,
        96px: 96px,
        128: 128px
    )
));

